fix: 長いURLなどが折り返されるようにoverflow-wrapを設定
fix #31

--- a/src/style.css
+++ b/src/style.css
@@ -78,6 +78,7 @@ body {
   font-family: var(--font-body);
   font-size: var(--fontSize-1);
   color: var(--color-text);
+  overflow-wrap: break-word;
 }
 
 footer {
